--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZWb-fM-tx0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IZo-Zn-HSe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -86,6 +86,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0nO-Dt-bzm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1634.4000000000001" y="901.79910044977521"/>
+        </scene>
+        <!--Data Source-->
+        <scene sceneID="DnB-Gc-E9A">
+            <objects>
+                <viewController id="IZo-Zn-HSe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qmd-Yf-4jF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qpv-2r-Piz" customClass="FSCalendar">
+                                <rect key="frame" x="67" y="100" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="IZo-Zn-HSe" id="m4k-rD-law"/>
+                                    <outlet property="delegate" destination="IZo-Zn-HSe" id="U28-iG-d5q"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LzI-AY-H3R"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bhv-Qu-Edl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1733" y="-169"/>
         </scene>
         <!--Loading Screen View Controller-->
         <scene sceneID="89I-yK-okG">
@@ -1052,70 +1078,6 @@ tapping PIN.</string>
             </objects>
             <point key="canvasLocation" x="7426.3999999999996" y="1456.8215892053975"/>
         </scene>
-        <!--Ib Calendar Data Source-->
-        <scene sceneID="M5W-IZ-L0T">
-            <objects>
-                <viewController id="ZWb-fM-tx0" customClass="Screen11ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="a5q-Y3-TEs" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7LF-tH-zBN">
-                                <rect key="frame" x="0.0" y="55" width="375" height="233"/>
-                                <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x9S-Z1-yXQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="233"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WNw-ge-CPn">
-                                            <size key="itemSize" width="105" height="103"/>
-                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarCell" id="JM8-Uh-mC6" customClass="CalendarCell" customModule="MyDailyPal" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="105" height="103"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="103"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wkj-os-IdD">
-                                                            <rect key="frame" x="31" y="41" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </view>
-                                                <constraints>
-                                                    <constraint firstItem="Wkj-os-IdD" firstAttribute="centerY" secondItem="JM8-Uh-mC6" secondAttribute="centerY" id="Z19-vR-n83"/>
-                                                    <constraint firstItem="Wkj-os-IdD" firstAttribute="centerX" secondItem="JM8-Uh-mC6" secondAttribute="centerX" id="vuZ-NJ-26B"/>
-                                                </constraints>
-                                                <connections>
-                                                    <outlet property="dateLabel" destination="Wkj-os-IdD" id="Mj2-vs-uwS"/>
-                                                </connections>
-                                            </collectionViewCell>
-                                        </cells>
-                                    </collectionView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="233" id="Gb2-X2-AtM"/>
-                                </constraints>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="4oJ-xb-KHl"/>
-                        <connections>
-                            <outlet property="ibCalendarDataSource" destination="ZWb-fM-tx0" id="Rs8-1S-XZy"/>
-                            <outlet property="ibCalendarDelegate" destination="ZWb-fM-tx0" id="aYd-wC-Gsd"/>
-                        </connections>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OQp-b3-xc7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="9749.6000000000004" y="1675.4122938530736"/>
-        </scene>
         <!--My Treatment Plan-->
         <scene sceneID="71E-jk-woD">
             <objects>
@@ -1382,7 +1344,7 @@ tapping PIN.</string>
                                 </constraints>
                             </imageView>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S4g-bf-iOq">
-                                <rect key="frame" x="309" y="389.5" width="52" height="30"/>
+                                <rect key="frame" x="309" y="390" width="52" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="IUD-Ss-H6Z"/>
                                     <constraint firstAttribute="height" constant="30" id="XSz-LM-oxw"/>
@@ -1408,7 +1370,7 @@ tapping PIN.</string>
                                 </state>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jgh-g3-aqU">
-                                <rect key="frame" x="309" y="439.5" width="52" height="30"/>
+                                <rect key="frame" x="309" y="440" width="52" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="QVM-BK-hFc"/>
                                     <constraint firstAttribute="width" constant="50" id="iTk-sl-eC0"/>
@@ -2324,21 +2286,6 @@ tapping PIN.</string>
             </objects>
             <point key="canvasLocation" x="2345" y="2096"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="feA-Sh-zFd">
-            <objects>
-                <viewController id="fdj-YD-Rrp" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YdJ-6b-K2i">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="PvD-gc-4iN"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xof-vf-T5E" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-882" y="155"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="yDA-TS-IYg">
             <objects>
@@ -2430,7 +2377,7 @@ tapping PIN.</string>
     <inferredMetricsTieBreakers>
         <segue reference="eWb-3s-225"/>
         <segue reference="rcD-LN-hkq"/>
-        <segue reference="AAy-rd-YxM"/>
+        <segue reference="GCy-I1-OTQ"/>
         <segue reference="j5J-h6-Oai"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
