Added screen11 VC

--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AXT-cV-4Ah">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -90,7 +90,7 @@
         <!--Data Source-->
         <scene sceneID="DnB-Gc-E9A">
             <objects>
-                <viewController id="IZo-Zn-HSe" sceneMemberID="viewController">
+                <viewController id="IZo-Zn-HSe" customClass="Screen11ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qmd-Yf-4jF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -100,8 +100,8 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="IZo-Zn-HSe" id="m4k-rD-law"/>
-                                    <outlet property="delegate" destination="IZo-Zn-HSe" id="U28-iG-d5q"/>
+                                    <outlet property="dataSource" destination="IZo-Zn-HSe" id="Fc1-XX-Pa2"/>
+                                    <outlet property="delegate" destination="IZo-Zn-HSe" id="0ac-Vm-9ow"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -2380,8 +2380,8 @@ tapping PIN.</string>
     <inferredMetricsTieBreakers>
         <segue reference="eWb-3s-225"/>
         <segue reference="rcD-LN-hkq"/>
-        <segue reference="GCy-I1-OTQ"/>
-        <segue reference="drF-mK-4BT"/>
+        <segue reference="ZiV-7C-pqW"/>
+        <segue reference="j5J-h6-Oai"/>
         <segue reference="0Hx-nR-LbK"/>
     </inferredMetricsTieBreakers>
 </document>
